tests/invalid/ArrayAssign_Invalid_1.whiley
function f(int[] ls) -> int[]:
    return ls

public export method test():
    int[] xs = [1, 2]
    xs[0] = true
    f(xs)
